--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ add_subdirectory(./src)
 #ADD_EXECUTABLE(sample sample.cpp src/Auth.cpp src/Conf.cpp)
 #add_library(curl STATIC IMPORTED)
 ADD_EXECUTABLE(sample sample.cpp)
-target_link_libraries(sample cosdk)
+target_link_libraries(sample uvsdk)
